[gd_scene format=3 uid="uid://c7xqpm5pause1"]

[ext_resource type="Script" path="res://Scenes/Menus/pause_menu.gd" id="1_pause"]
[ext_resource type="FontFile" uid="uid://enqqfjpwfd6j" path="res://Scenes/Fonts/mini_pixel-7.ttf" id="2_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.12, 0.08, 0.95)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.6, 0.25, 1)

[node name="PauseMenu" type="CanvasLayer"]
layer = 100
process_mode = 3
script = ExtResource("1_pause")

[node name="FondoOscuro" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="PanelPrincipal" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -200.0
offset_right = 220.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="PanelPrincipal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="PanelPrincipal/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TituloPausa" type="Label" parent="PanelPrincipal/MarginContainer/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 48
theme_override_colors/font_color = Color(0.3, 0.9, 0.35, 1)
text = "PAUSA"
horizontal_alignment = 1

[node name="BotonControles" type="Button" parent="PanelPrincipal/MarginContainer/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Controles"

[node name="BotonMusica" type="Button" parent="PanelPrincipal/MarginContainer/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "MÃºsica: ON"

[node name="BotonSalir" type="Button" parent="PanelPrincipal/MarginContainer/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Salir"

[node name="PanelControles" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -280.0
offset_right = 280.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="PanelControles"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="PanelControles/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TituloControles" type="Label" parent="PanelControles/MarginContainer/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 52
theme_override_colors/font_color = Color(0.3, 0.9, 0.35, 1)
text = "Controles"
horizontal_alignment = 1

[node name="ListaControles" type="RichTextLabel" parent="PanelControles/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_font")
theme_override_font_sizes/normal_font_size = 36
theme_override_colors/default_color = Color(0.9, 0.95, 0.9, 1)
bbcode_enabled = true
text = "[center]Movimiento: [b]Flechas izquierda y derecha[/b]
Saltar: [b]Espacio[/b] o [b]Enter[/b]
Correr: [b]Flechas + Ctrl[/b]
Atacar: [b]X[/b]
Bloquear / Parry: [b]Z[/b]
Interactuar: [b]E[/b]
Pausa: [b]ESC[/b][/center]"
fit_content = true
scroll_active = false

[node name="BotonVolver" type="Button" parent="PanelControles/MarginContainer/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 38
text = "Volver"
